# Lab4_Checkers

./: README.md
Lab4/: .project  lab4.cabal
Lab4/saves/: saves.txt
Lab4/src/: .gitignore  Bindings.hs  Calc.hs  Display.hs  GameBoard.hs  Main.hs  MyPolygon.hs  MyQuads.hs  Players.hs  TestBranch.hs
