name:           Lab4
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         Eric

executable Lab4
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   base >= 4,
                   GLUT, 
                   OpenGL,
                   QuickCheck,
                   graph-wrapper
  ghc-options:     -Wall 
  other-modules:   
                   MyQuads,
                   Display,
                   Bindings,
                   GameBoard,
                   Players

